recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameter increment.
    spiral(100,16914,2);
          ^